--- a/front/index.html
+++ b/front/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000000" />
 <!--    TODO: вернуть поближе к новому году-->
 <!--    <script src="https://app.embed.im/snow.js" defer></script>-->
